// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrustBar matches snapshot in dark theme 1`] = `
<div
  class="css-view-g5y9jx"
  style="border-top-left-radius: 22px; border-top-right-radius: 22px; border-bottom-right-radius: 22px; border-bottom-left-radius: 22px; border-top-color: rgba(213,226,210,0.08); border-right-color: rgba(213,226,210,0.08); border-bottom-color: rgba(213,226,210,0.08); border-left-color: rgba(213,226,210,0.08); background-color: rgb(24, 33, 28);"
>
  <div
    class="css-view-g5y9jx"
  >
    <div
      class="css-view-g5y9jx r-alignItems-1awozwy r-flexDirection-18u37iz r-gap-1cmwbt1 r-justifyContent-1wtj0ep"
    >
      <div
        class="css-text-146c3p1 r-fontSize-1gkfh8e r-fontWeight-b88u0q r-letterSpacing-ud0q2t r-textTransform-tsynxw"
        dir="auto"
        style="color: rgb(136, 150, 134);"
      >
        LINKED INSTITUTIONS
      </div>
      <button
        class="css-view-g5y9jx r-cursor-1loqt21 r-touchAction-1otgn73"
        role="button"
        style="border-top-left-radius: 28px; border-top-right-radius: 28px; border-bottom-right-radius: 28px; border-bottom-left-radius: 28px; border-top-color: rgba(213,226,210,0.16); border-right-color: rgba(213,226,210,0.16); border-bottom-color: rgba(213,226,210,0.16); border-left-color: rgba(213,226,210,0.16); background-color: rgba(0, 0, 0, 0);"
        tabindex="0"
        type="button"
      >
        <div
          class="css-view-g5y9jx"
        >
          <div
            class="css-text-146c3p1"
            dir="auto"
            style="color: rgb(230, 236, 228);"
          >
            Manage
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-view-g5y9jx r-gap-1ssbvtb"
    >
      <div
        class="css-view-g5y9jx r-borderRadius-1867qdf r-borderWidth-rs99b7 r-gap-ojf8lh r-paddingBlock-1mmae3n r-paddingInline-3o4zer"
        style="border-top-color: rgba(213,226,210,0.08); border-right-color: rgba(213,226,210,0.08); border-bottom-color: rgba(213,226,210,0.08); border-left-color: rgba(213,226,210,0.08); background-color: rgb(31, 42, 36);"
      >
        <div
          class="css-view-g5y9jx r-alignItems-1awozwy r-flexDirection-18u37iz r-gap-uaa2di r-justifyContent-1wtj0ep"
        >
          <div
            class="css-text-146c3p1"
            dir="auto"
            style="color: rgb(230, 236, 228);"
          >
            Chase
          </div>
          <div
            class="css-view-g5y9jx"
            style="border-top-left-radius: 28px; border-top-right-radius: 28px; border-bottom-right-radius: 28px; border-bottom-left-radius: 28px; border-top-color: rgba(157,190,123,1.00); border-right-color: rgba(157,190,123,1.00); border-bottom-color: rgba(157,190,123,1.00); border-left-color: rgba(157,190,123,1.00); background-color: rgba(157, 190, 123, 0.15);"
          >
            <div
              class="css-text-146c3p1"
              dir="auto"
              style="color: rgb(157, 190, 123);"
            >
              Synced
            </div>
          </div>
        </div>
        <div
          class="css-text-146c3p1"
          dir="auto"
          style="color: rgb(179, 192, 176);"
        >
          Updated 2h ago
        </div>
      </div>
      <div
        class="css-view-g5y9jx r-borderRadius-1867qdf r-borderWidth-rs99b7 r-gap-ojf8lh r-paddingBlock-1mmae3n r-paddingInline-3o4zer"
        style="border-top-color: rgba(213,226,210,0.08); border-right-color: rgba(213,226,210,0.08); border-bottom-color: rgba(213,226,210,0.08); border-left-color: rgba(213,226,210,0.08); background-color: rgb(31, 42, 36);"
      >
        <div
          class="css-view-g5y9jx r-alignItems-1awozwy r-flexDirection-18u37iz r-gap-uaa2di r-justifyContent-1wtj0ep"
        >
          <div
            class="css-text-146c3p1"
            dir="auto"
            style="color: rgb(230, 236, 228);"
          >
            Capital One
          </div>
          <div
            class="css-view-g5y9jx"
            style="border-top-left-radius: 28px; border-top-right-radius: 28px; border-bottom-right-radius: 28px; border-bottom-left-radius: 28px; border-top-color: rgba(196,165,106,1.00); border-right-color: rgba(196,165,106,1.00); border-bottom-color: rgba(196,165,106,1.00); border-left-color: rgba(196,165,106,1.00); background-color: rgba(196, 165, 106, 0.15);"
          >
            <div
              class="css-text-146c3p1"
              dir="auto"
              style="color: rgb(196, 165, 106);"
            >
              Reconnect
            </div>
          </div>
        </div>
        <div
          class="css-text-146c3p1"
          dir="auto"
          style="color: rgb(179, 192, 176);"
        >
          Needs reconnect
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TrustBar matches snapshot in light theme 1`] = `
<div
  class="css-view-g5y9jx"
  style="border-top-left-radius: 22px; border-top-right-radius: 22px; border-bottom-right-radius: 22px; border-bottom-left-radius: 22px; border-top-color: rgba(39,48,35,0.08); border-right-color: rgba(39,48,35,0.08); border-bottom-color: rgba(39,48,35,0.08); border-left-color: rgba(39,48,35,0.08); background-color: rgb(254, 252, 247);"
>
  <div
    class="css-view-g5y9jx"
  >
    <div
      class="css-view-g5y9jx r-alignItems-1awozwy r-flexDirection-18u37iz r-gap-1cmwbt1 r-justifyContent-1wtj0ep"
    >
      <div
        class="css-text-146c3p1 r-fontSize-1gkfh8e r-fontWeight-b88u0q r-letterSpacing-ud0q2t r-textTransform-tsynxw"
        dir="auto"
        style="color: rgb(127, 140, 121);"
      >
        LINKED INSTITUTIONS
      </div>
      <button
        class="css-view-g5y9jx r-cursor-1loqt21 r-touchAction-1otgn73"
        role="button"
        style="border-top-left-radius: 28px; border-top-right-radius: 28px; border-bottom-right-radius: 28px; border-bottom-left-radius: 28px; border-top-color: rgba(39,48,35,0.14); border-right-color: rgba(39,48,35,0.14); border-bottom-color: rgba(39,48,35,0.14); border-left-color: rgba(39,48,35,0.14); background-color: rgba(0, 0, 0, 0);"
        tabindex="0"
        type="button"
      >
        <div
          class="css-view-g5y9jx"
        >
          <div
            class="css-text-146c3p1"
            dir="auto"
            style="color: rgb(39, 48, 35);"
          >
            Manage
          </div>
        </div>
      </button>
    </div>
    <div
      class="css-view-g5y9jx r-gap-1ssbvtb"
    >
      <div
        class="css-view-g5y9jx r-borderRadius-1867qdf r-borderWidth-rs99b7 r-gap-ojf8lh r-paddingBlock-1mmae3n r-paddingInline-3o4zer"
        style="border-top-color: rgba(39,48,35,0.08); border-right-color: rgba(39,48,35,0.08); border-bottom-color: rgba(39,48,35,0.08); border-left-color: rgba(39,48,35,0.08); background-color: rgb(242, 239, 230);"
      >
        <div
          class="css-view-g5y9jx r-alignItems-1awozwy r-flexDirection-18u37iz r-gap-uaa2di r-justifyContent-1wtj0ep"
        >
          <div
            class="css-text-146c3p1"
            dir="auto"
            style="color: rgb(39, 48, 35);"
          >
            Chase
          </div>
          <div
            class="css-view-g5y9jx"
            style="border-top-left-radius: 28px; border-top-right-radius: 28px; border-bottom-right-radius: 28px; border-bottom-left-radius: 28px; border-top-color: rgba(106,135,88,1.00); border-right-color: rgba(106,135,88,1.00); border-bottom-color: rgba(106,135,88,1.00); border-left-color: rgba(106,135,88,1.00); background-color: rgba(106, 135, 88, 0.15);"
          >
            <div
              class="css-text-146c3p1"
              dir="auto"
              style="color: rgb(106, 135, 88);"
            >
              Synced
            </div>
          </div>
        </div>
        <div
          class="css-text-146c3p1"
          dir="auto"
          style="color: rgb(94, 108, 88);"
        >
          Updated 2h ago
        </div>
      </div>
      <div
        class="css-view-g5y9jx r-borderRadius-1867qdf r-borderWidth-rs99b7 r-gap-ojf8lh r-paddingBlock-1mmae3n r-paddingInline-3o4zer"
        style="border-top-color: rgba(39,48,35,0.08); border-right-color: rgba(39,48,35,0.08); border-bottom-color: rgba(39,48,35,0.08); border-left-color: rgba(39,48,35,0.08); background-color: rgb(242, 239, 230);"
      >
        <div
          class="css-view-g5y9jx r-alignItems-1awozwy r-flexDirection-18u37iz r-gap-uaa2di r-justifyContent-1wtj0ep"
        >
          <div
            class="css-text-146c3p1"
            dir="auto"
            style="color: rgb(39, 48, 35);"
          >
            Capital One
          </div>
          <div
            class="css-view-g5y9jx"
            style="border-top-left-radius: 28px; border-top-right-radius: 28px; border-bottom-right-radius: 28px; border-bottom-left-radius: 28px; border-top-color: rgba(164,131,69,1.00); border-right-color: rgba(164,131,69,1.00); border-bottom-color: rgba(164,131,69,1.00); border-left-color: rgba(164,131,69,1.00); background-color: rgba(164, 131, 69, 0.15);"
          >
            <div
              class="css-text-146c3p1"
              dir="auto"
              style="color: rgb(164, 131, 69);"
            >
              Reconnect
            </div>
          </div>
        </div>
        <div
          class="css-text-146c3p1"
          dir="auto"
          style="color: rgb(94, 108, 88);"
        >
          Needs reconnect
        </div>
      </div>
    </div>
  </div>
</div>
`;
